añadir dependencias